--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 	<head>
 		<title>About Me</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	
 	<body href="images/hypnotize.png">
 		<header>
-			<h1>Kevin Do</h1>
 				<div class="topnav">
 					<a href="contact.html">Contact</a>
 					<a href="portfolio.html">Portfolio</a>
@@ -21,7 +21,8 @@
 		<hr class="hr-line">
 		<img id="bio-image" src="https://placehold.it/200x200">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam euismod metus ac lobortis tempus. Sed laoreet aliquet ex, porttitor scelerisque sem egestas vel. Fusce felis enim, ultrices at nisl in, commodo mattis nisl. Donec quis fermentum nisl. Nulla sit amet sollicitudin mi. Phasellus rhoncus mauris sapien, ac dictum nibh luctus non. Nulla facilisi. Praesent at sodales risus, ac convallis turpis.</p>
-		<p>Morbi scelerisque justo eget dui venenatis, at elementum justo congue. Quisque sed nisl pretium mauris euismod gravida. Proin ac dui condimentum, accumsan ipsum vitae, gravida massa. Vestibulum quis lacus euismod, venenatis nulla fringilla, blandit odio. Phasellus pulvinar pretium lorem, quis tempus arcu tincidunt vel. Quisque consequat eleifend auctor. Ut lacinia dictum elementum. Sed tincidunt pretium mollis. Praesent ac massa gravida, porttitor justo in, pharetra diam.</p>		
+		<p>Morbi scelerisque justo eget dui venenatis, at elementum justo congue. Quisque sed nisl pretium mauris euismod gravida. Proin ac dui condimentum, accumsan ipsum vitae, gravida massa. Vestibulum quis lacus euismod, venenatis nulla fringilla, blandit odio. Phasellus pulvinar pretium lorem, quis tempus arcu tincidunt vel. Quisque consequat eleifend auctor. Ut lacinia dictum elementum. Sed tincidunt pretium mollis. Praesent ac massa gravida, porttitor justo in, pharetra diam.</p>
+	</div>	
 	</div class="boxed">
 
 	<ul id=contact>
