--- a/portfolio.html
+++ b/portfolio.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<title>Portfolio</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="style/style.css">
 	</head>
 	
 	<body href="images/hypnotize.png">
 		<header>
-			<h1>Kevin Do</h1>
+
 				<div class="topnav">
 					<a href="contact.html">Contact</a>
 					<a href="portfolio.html">Portfolio</a>
